--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0; url=https://doijest.github.io/moorwalkers.html">
-</head>
-<body>
-  <p>If you are not redirected automatically, click <a href="https://doijest.github.io/moorwalkers.html">here</a>.</p>
-</body>
+  <head>
+    <title>Moor Walkers Map</title>
+  </head>
+  <body>
+    <h1>Welcome to the Moor Walkers Map</h1>
+    <p>Click the links below to view the maps:</p>
+    <ul>
+      <li><a href="https://doijest.github.io/moorwalkers_with_markers.html">Map with Markers</a></li>
+      <li><a href="https://doijest.github.io/moorwalkers_without_markers.html">Map without Markers</a></li>
+    </ul>
+  </body>
 </html>
