--- a/index.html
+++ b/index.html
@@ -2,13 +2,62 @@
 <html>
   <head>
     <title>Moor Walkers Map</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+      header {
+        background-color: #0A4478;
+        color: white;
+        padding: 1em;
+        text-align: center;
+      }
+      h1 {
+        margin: 0;
+        font-size: 2.5em;
+      }
+      p {
+        font-size: 1.2em;
+        margin-top: 2em;
+        margin-bottom: 1em;
+        text-align: center;
+      }
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+      }
+      li {
+        display: inline-block;
+        margin: 0 1em;
+      }
+      a {
+        display: block;
+        padding: 0.5em 1em;
+        background-color: #0A4478;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.2s ease;
+      }
+      a:hover {
+        background-color: #1A4E87;
+      }
+    </style>
   </head>
   <body>
-    <h1>Welcome to the Moor Walkers Map</h1>
-    <p>Click the links below to view the maps:</p>
-    <ul>
-      <li><a href="https://doijest.github.io/moorwalkers_with_markers.html">Map with Markers</a></li>
-      <li><a href="https://doijest.github.io/moorwalkers_without_markers.html">Map without Markers</a></li>
-    </ul>
+    <header>
+      <h1>Moor Walkers Map</h1>
+    </header>
+    <main>
+      <p><strong>Click the links below to view the maps:</strong></p>
+      <ul>
+        <li><a href="https://doijest.github.io/moorwalkers_with_markers.html">Map with Markers</a></li>
+        <li><a href="https://doijest.github.io/moorwalkers_without_markers.html">Map without Markers</a></li>
+      </ul>
+    </main>
   </body>
 </html>
