--- a/moorwalkers.html
+++ b/moorwalkers.html
@@ -53,6 +53,7 @@
       <h1>Moor Walkers Map</h1>
     </header>
     <main>
+      <p>Welcome to our website, dedicated to showcasing the incredible walks that the Moor Walkers have taken over Dartmoor and the surrounding areas. Join us on a journey through the heart of this stunning landscape and discover the hidden treasures that Dartmoor has to offer.</p>
       <p><strong>Click the links below to view the maps:</strong></p>
       <ul>
         <li><a href="https://doijest.github.io/moorwalkers_with_markers.html">Map with Markers</a></li>
