--- a/index.html
+++ b/index.html
@@ -1,64 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Moor Walkers Map</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Under Construction</title>
     <style>
+      /* Style your holding page as desired */
       body {
+        background-color: #f8f8f8;
         font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-      header {
-        background-color: #0A4478;
-        color: white;
-        padding: 1em;
+        color: #444444;
         text-align: center;
+        padding-top: 50px;
       }
+
       h1 {
-        margin: 0;
-        font-size: 2.5em;
+        font-size: 48px;
+        margin-bottom: 20px;
       }
+
       p {
-        font-size: 1.2em;
-        margin-top: 2em;
-        margin-bottom: 1em;
-        text-align: center;
+        font-size: 24px;
+        margin-bottom: 30px;
       }
-      ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        text-align: center;
+
+      .logo {
+        width: 200px;
+        height: auto;
+        margin-bottom: 30px;
       }
-      li {
+
+      .social-icons {
+        margin-top: 50px;
+      }
+
+      .social-icons a {
         display: inline-block;
-        margin: 0 1em;
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+        border-radius: 50%;
+        background-color: #eeeeee;
+        color: #444444;
+        line-height: 50px;
+        font-size: 24px;
+        transition: all 0.3s ease;
       }
-      a {
-        display: block;
-        padding: 0.5em 1em;
-        background-color: #0A4478;
-        color: white;
-        text-decoration: none;
-        border-radius: 5px;
-        transition: background-color 0.2s ease;
-      }
-      a:hover {
-        background-color: #1A4E87;
+
+      .social-icons a:hover {
+        background-color: #444444;
+        color: #ffffff;
       }
     </style>
   </head>
   <body>
-    <header>
-      <h1>Moor Walkers Map</h1>
-    </header>
-    <main>
-      <p>Welcome to our website, dedicated to showcasing the incredible walks that the Moor Walkers have taken over Dartmoor and the surrounding areas. Join us on a journey through the heart of this stunning landscape and discover the hidden treasures that Dartmoor has to offer.</p>
-      <p><strong>Click the links below to view the maps:</strong></p>
-      <ul>
-        <li><a href="https://doijest.github.io/moorwalkers_with_markers.html">Map with Markers</a></li>
-        <li><a href="https://doijest.github.io/moorwalkers_without_markers.html">Map without Markers</a></li>
-      </ul>
-    </main>
+    <h1>Website Under Construction</h1>
+    <p>We're sorry, but this website is currently under construction.</p>
   </body>
 </html>
