--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -78,7 +78,7 @@
 
 	<main>
 		<section class="recipe-links">
-			<h2>Links to Recipes:</h2>
+			<h2>Recipes:</h2>
 				<ul>
 					<li><a href="recipes/spagbol.html">Spaghetti Bolognaise</a></li>
 					<li><a href="recipe2.html">Recipe 2</a></li>
@@ -89,16 +89,108 @@
 			<button onclick="randomRecipeLink()">I'm Feeling Lucky</button>
 		</section>
 		<section>
-			<h2>Links to Cooking Instructions:</h2>
+			<h2>Cooking Instructions:</h2>
 				<ul>
-					<li><a href="instructions/berrie_brekkie.html">Berrie Brekkie</a></li>
-					<li><a href="instruction2.html">Air Fryer: Heck Sausages</a></li>
-					<li><a href="instruction3.html">Recipe 3</a></li>
-					<li><a href="instruction4.html">Recipe 4</a></li>
+					<li><a href="#berrie-brekkie">Berrie Brekkie</a></li>
+					<li><a href="#airfryer-cauliflower-pakoras">Air Fryer: Cauliflower Pakoras</a></li>
+					<li><a href="#airfryer-new-potatoes">Air Fryer: New Poataoes</a></li>
+					<li><a href="#microwave-chicken">Microwave: Chicken</a></li>
 					<li><a href="instruction5.html">Recipe 5</a></li>
 				</ul>
 		</section>
 	</main>
+
+	<main>
+		<section id="airfryer-cauliflower-pakoras">
+			<h2>Air Fryer: Cauliflower Pakoras</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Plain White Flour 30g</li>
+				<li>0% Fat Natural Yogurt 100g</li>
+				<li>Water 100ml</li>
+				<li>Paprika level teaspoon(s) x 1</li>
+				<li>Chilli Powder level teaspoon(s) x 1</li>
+				<li>Cauliflower, Raw 600g</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Mix everything but the cauliflower in a bowl using an electric whisk</li>
+				<li>Cut the cauliflower into florets</li>
+				<li>Dip half of the cauliflower in the mixture and then add to air fryer at 180 for 15 mins</li>
+				<li>Take first batch out and store in microwave, then repeat a second batch</li>
+			</ol>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+	<main>
+		<section id="airfryer-new-potatoes">
+			<h2>Air Fryer: New Poataoes</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>New Potatoes 1000g</li>
+				<li>Extra Virgin Olive Oil level tablespoon(s) x 1</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Set air fryer to 200deg</li>
+				<li>Add potatoes and oil, then mix</li>
+				<li>Cook for 30 mins, stirring every 10 minutess</li>
+			</ol>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+	<main>
+		<section id="berrie-brekkie">
+			<h2>Berry Brekkie</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Frozen Fruit 300g</li>
+				<li>0% Fat Natural Yogurt 100g</li>
+				<li>Porridge oats 50g</li>
+				<li>Banana x 1</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Add The frozen fruit and porridge oats to a large bowl, microwave on full power for 3 minutes</li>
+				<li>Chop up the banana</li>
+				<li>Mix in the banana and yoghurt with the fruit and oats</li>
+			</ol>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+	<main>
+		<section id="microwave-chicken">
+			<h2>Microwave: Chicken</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Chicken breast, skinless, raw</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Layer chicken breasts in rice cooker. Add enough water to cover the top layer at least half way but cover if possible. Add lids and then cook on full power as below.</li>
+				<li>Thawed chicken: 550g - 13min</li>
+				<li>Thawed chicken: 600g - 15min</li>
+				<li>Thawed chicken: 650g - 17min</li>
+				<li>Frozen chicken: 550g - 20min</li>
+			</ol>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
 
 	<script>
 		function randomRecipeLink() {
