--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -33,7 +33,7 @@
 		}
 
 		li {
-			margin: 10px 0;
+			margin-bottom: 10px;
 		}
 
 		a {
@@ -61,12 +61,25 @@
 			background-color: #003399;
 		}
 
-		.home-button {
-			float: right;
+		/* Style for screens larger than 1200px */
+		@media only screen and (min-width: 1200px) {
+		.index-section {
+			column-count: 3;
+		}
 		}
 
-		.recipe-links {
-			margin-bottom: 50px;
+		/* Style for screens between 768px and 1199px */
+		@media only screen and (min-width: 768px) and (max-width: 1199px) {
+		.index-section {
+			column-count: 2;
+		}
+		}
+		
+		/* Style for screens smaller than 767px */
+		@media only screen and (max-width: 767px) {
+		.index-section {
+			column-count: 1;
+		}
 		}
 
 	</style>
@@ -77,39 +90,44 @@
 	</header>
 
 	<main>
-		<section class="recipe-links">
-			<h2>Recipes:</h2>
-				<ul>
-					<li><a href="recipes/spagbol.html">Spaghetti Bolognaise</a></li>
-					<li><a href="recipe2.html">Recipe 2</a></li>
-					<li><a href="recipe3.html">Recipe 3</a></li>
-					<li><a href="recipe4.html">Recipe 4</a></li>
-					<li><a href="recipe5.html">Recipe 5</a></li>
-				</ul>
-			<button onclick="randomRecipeLink()">I'm Feeling Lucky</button>
+		<h2>Recipes:</h2>
+		<section class="index-section">
+			<ul>
+				<li><a href="#mushroom-stroganoff">Mushroom Stroganoff</a></li>
+			</ul>
 		</section>
-		<section>
-			<h2>Cooking Instructions:</h2>
-				<ul>
-					<li><a href="#berrie-brekkie">Berrie Brekkie</a></li>
-					<li><a href="#airfryer-cauliflower-pakoras">Air Fryer: Cauliflower Pakoras</a></li>
-					<li><a href="#airfryer-new-potatoes">Air Fryer: New Poataoes</a></li>
-					<li><a href="#microwave-chicken">Microwave: Chicken</a></li>
-					<li><a href="instruction5.html">Recipe 5</a></li>
-				</ul>
+	</main>
+
+	<header>
+		<button onclick="randomRecipeLink()">I'm Feeling Lucky</button>
+	</header>
+	
+	<main>
+		<h2>Cooking Instructions:</h2>
+		<section class="index-section">
+			<ul>
+				<li><a href="#berrie-brekkie">Berrie Brekkie</a></li>
+				<li><a href="#airfryer-cauliflower-pakoras">Air Fryer: Cauliflower Pakoras</a></li>
+				<li><a href="#airfryer-new-potatoes">Air Fryer: New Potatoes</a></li>
+				<li><a href="#flat-bread">Flat Bread</a></li>
+				<li><a href="#homemade-baked-beans">Homemade Braked Beans</a></li>
+				<li><a href="#microwave-chicken">Microwave: Chicken</a></li>
+				<li><a href="#quark-dip">Quark Dip</a></li>
+			</ul>
 		</section>
 	</main>
 
 	<main>
 		<section id="airfryer-cauliflower-pakoras">
+			<hr>
 			<h2>Air Fryer: Cauliflower Pakoras</h2>
 			<h3>Ingredients</h3>
 			<ul>
 				<li>Plain White Flour 30g</li>
 				<li>0% Fat Natural Yogurt 100g</li>
 				<li>Water 100ml</li>
-				<li>Paprika level teaspoon(s) x 1</li>
-				<li>Chilli Powder level teaspoon(s) x 1</li>
+				<li>Paprika, level teaspoon(s) x 1</li>
+				<li>Chilli Powder, level teaspoon(s) x 1</li>
 				<li>Cauliflower, Raw 600g</li>
 			</ul>
 			<h3>Directions</h3>
@@ -119,6 +137,7 @@
 				<li>Dip half of the cauliflower in the mixture and then add to air fryer at 180 for 15 mins</li>
 				<li>Take first batch out and store in microwave, then repeat a second batch</li>
 			</ol>
+			<hr>
 		</section>
 	</main>
 
@@ -128,11 +147,12 @@
 
 	<main>
 		<section id="airfryer-new-potatoes">
-			<h2>Air Fryer: New Poataoes</h2>
+			<hr>
+			<h2>Air Fryer: New Potatoes</h2>
 			<h3>Ingredients</h3>
 			<ul>
 				<li>New Potatoes 1000g</li>
-				<li>Extra Virgin Olive Oil level tablespoon(s) x 1</li>
+				<li>Extra Virgin Olive Oil, level tablespoon(s) x 1</li>
 			</ul>
 			<h3>Directions</h3>
 			<ol>
@@ -140,6 +160,7 @@
 				<li>Add potatoes and oil, then mix</li>
 				<li>Cook for 30 mins, stirring every 10 minutess</li>
 			</ol>
+			<hr>
 		</section>
 	</main>
 
@@ -149,6 +170,7 @@
 
 	<main>
 		<section id="berrie-brekkie">
+			<hr>
 			<h2>Berry Brekkie</h2>
 			<h3>Ingredients</h3>
 			<ul>
@@ -163,6 +185,7 @@
 				<li>Chop up the banana</li>
 				<li>Mix in the banana and yoghurt with the fruit and oats</li>
 			</ol>
+			<hr>
 		</section>
 	</main>
 
@@ -171,7 +194,60 @@
 	</header>
 
 	<main>
+		<section id="flat-bread">
+			<hr>
+			<h2>Flat Bread</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>White Self Raising Flour 250g</li>
+				<li>0% Fat Natural Yogurt 250g</li>
+				<li>Salt, pinch x 1</li>
+				<li>Baking powder, teaspoon(s), level x 1/2</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>!!!This needs to be tried using the air fryer!!!</li>
+				<li>Preheat fan oven to 200 degrees making sure 4 shelves are available</li>
+				<li>Prepare 4 baking trays by placing greaseproof paper on each and then flouring the paper to prevent the dough sticking</li>
+				<li>Add 250g of white self raising flour, baking powder and salt to a food processor and start processing, slowly add the natural yoghurt until it forms a dough, this should require all of the 250g</li>
+				<li>Tip the dough out onto a floured chopping board and split into 4 balls, roll each ball out into a flat shape about the size of your baking trays, flouring the board and dough as necessary. Add each rolled out ball to a prepared baking tray and place in the oven for approx. 10 minutes</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+	
+	<main>
+		<section id="homemade-baked-beans">
+			<hr>
+			<h2>Homemade baked Beans</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Tesco Haricot Beans in Water, can(s), large, drained x 1</li>
+				<li>Tinned Tomatoes, can(s), large x 1</li>
+				<li>Worcestershire Sauce, level teaspoon(s) x 4</li>
+				<li>Tomato Purèe, level tablespoon(s) x 1</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Add everything to a suacepan and cook</li>
+				<li>Feel free to use any type of tinned bean</li>
+				<li>Double up the contents to make twice as much</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>	
+	
+	<main>
 		<section id="microwave-chicken">
+			<hr>
 			<h2>Microwave: Chicken</h2>
 			<h3>Ingredients</h3>
 			<ul>
@@ -185,12 +261,72 @@
 				<li>Thawed chicken: 650g - 17min</li>
 				<li>Frozen chicken: 550g - 20min</li>
 			</ol>
+			<hr>
 		</section>
 	</main>
 
 	<header>
 		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
 	</header>
+
+	<main>
+		<section id="mushroom-stroganoff">
+			<hr>
+			<h2>Mushroom Stoganoff</h2>
+			<p>Creamy and rich, this luxurious looking dish is surprisingly quick and easy to make. This veggie version is packed with flavour, with a little chilli powder giving it a hint of heat.</p>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Calorie controlled cooking spray x 4 sprays</li>
+				<li>Onion(s), finely chopped x 1</li>
+				<li>Garlic, cloves, crushed x 2</li>
+				<li>Mushrooms 600g</li>
+				<li>Cannellini Beans, can(s), large, drained x 1</li>
+				<li>0% Fat Natural Yogurt 30g</li>
+				<li>Philadelphia Lightest Soft Cheese 80g</li>
+				<li>Paprika, tablespoon(s), level x 1</li>
+				<li>Chilli Powder, teaspoon(s), level x 1</li>
+				<li>White or Brown Rice, as required</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Mist a large frying pan with cooking spray and cook the onion for 6-8 minutes over a medium heat until soft, then add the spices and garlic and cook for another minute. Add the mushrooms and cook for 7-8 minutes, or until tender.</li>
+				<li>Stir in the soft cheese and yogurt and allow to melt, then season to taste.</li>
+				<li>Cook the rice to pack instructions and serve with the stroganoff.</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+	<main>
+		<section id="quark-dip">
+			<hr>
+			<h2>Quark Dip</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Quark, fat free, plain 225g</li>
+				<li>Chickpeas, can(s), large, drained x 1</li>
+				<li>Cherry Tomatoes 225g</li>
+				<li>Tomato Purèe 15g</li>
+				<li>Pickled Gherkins, drained, medium x 4</li>
+				<li>Chilli flakes, pinch x 4</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Whiz up the quark and chick peas until they are a fine paste</li>
+				<li>Then add the rest to chop roughly</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
 
 	<script>
 		function randomRecipeLink() {
