--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -89,7 +89,7 @@
 				<li><a href="#airfryer-cauliflower-pakoras">Air Fryer: Cauliflower Pakoras</a></li>
 				<li><a href="#airfryer-new-potatoes">Air Fryer: New Potatoes</a></li>
 				<li><a href="#flat-bread">Flat Bread</a></li>
-				<li><a href="#homemade-baked-beans">Homemade Braked Beans</a></li>
+				<li><a href="#homemade-baked-beans">Homemade Baked Beans</a></li>
 				<li><a href="#microwave-chicken">Microwave: Chicken</a></li>
 				<li><a href="#quark-dip">Quark Dip</a></li>
 			</ul>
@@ -202,7 +202,7 @@
 	<main>
 		<section id="homemade-baked-beans">
 			<hr>
-			<h2>Homemade baked Beans</h2>
+			<h2>Homemade Baked Beans</h2>
 			<h3>Ingredients</h3>
 			<ul>
 				<li>Tesco Haricot Beans in Water, can(s), large, drained x 1</li>
