--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -87,7 +87,10 @@
 			<ul>
 				<li><a href="#berrie-brekkie">Berrie Brekkie</a></li>
 				<li><a href="#airfryer-cauliflower-pakoras">Air Fryer: Cauliflower Pakoras</a></li>
+				<li><a href="#airfryer-heck-chicken-sausages">Air Fryer: Heck Chicken Sausages</a></li>
 				<li><a href="#airfryer-new-potatoes">Air Fryer: New Potatoes</a></li>
+				<li><a href="#airfryer-squash-diced">Air Fryer: Squash Diced</a></li>
+				<li><a href="#airfryer-squash-quartered">Air Fryer: Squash Quartered</a></li>
 				<li><a href="#flat-bread">Flat Bread</a></li>
 				<li><a href="#homemade-baked-beans">Homemade Baked Beans</a></li>
 				<li><a href="#microwave-chicken">Microwave: Chicken</a></li>
@@ -125,6 +128,28 @@
 	</header>
 
 	<main>
+		<section id="airfryer-heck-chicken-sausages">
+			<hr>
+			<h2>Air Fryer: Heck Chicken Sauages</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Heck Chicken Sauages x 8</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Set air fryer to 180 degrees</li>
+				<li>Add sausages to the basket</li>
+				<li>Cook for 15 mins, shaking every 5 mins</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+	<main>
 		<section id="airfryer-new-potatoes">
 			<hr>
 			<h2>Air Fryer: New Potatoes</h2>
@@ -135,9 +160,64 @@
 			</ul>
 			<h3>Directions</h3>
 			<ol>
-				<li>Set air fryer to 200deg</li>
-				<li>Add potatoes and oil, then mix</li>
-				<li>Cook for 30 mins, stirring every 10 minutess</li>
+				<li>Set air fryer to 200 degrees</li>
+				<li>Add potatoes and oil to basket, then mix</li>
+				<li>Cook for 30 mins, stirring every 10 mins</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+	<main>
+		<section id="airfryer-squash-diced">
+			<hr>
+			<h2>Air Fryer: Squash Diced</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Butternut Squash x 1</li>
+				<li>Extra Virgin Olive Oil, level tablespoon(s) x 1</li>
+				<li>Chilli Flakes, teaspoon(s), level x 1</li>
+				<li>Cumin Seeds, teaspoon(s), level x 1</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Set air fryer to 200 degrees</li>
+				<li>Peel, deseed and dice squash, then add to basket</li>
+				<li>Add the oil, chilli flakes and cumin seeds, then mix</li>
+				<li>Cook for 30 mins, stirring every 10 mins</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+	<main>
+		<section id="airfryer-squash-quartered">
+			<hr>
+			<h2>Air Fryer: Squash Quartered</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Butternut Squash x 1</li>
+				<li>Extra Virgin Olive Oil, level tablespoon(s) x 1</li>
+				<li>Chilli Flakes, teaspoon(s), level x 1</li>
+				<li>Cumin Seeds, teaspoon(s), level x 1</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Set air fryer to 200 degrees</li>
+				<li>Peel, deseed and quarter squash</li>
+				<li>Stack first 2 quarters in basket</li>
+				<li>Sprinkle half the oil, chilli flakes and cumin seeds</li>
+				<li>Stack second 2 quarters on top of first</li>
+				<li>Sprinkle other half the oil, chilli flakes and cumin seeds</li>
+				<li>Cook for 40 mins, swapping layers after 20 mins</li>
 			</ol>
 			<hr>
 		</section>
@@ -160,7 +240,7 @@
 			</ul>
 			<h3>Directions</h3>
 			<ol>
-				<li>Add The frozen fruit and porridge oats to a large bowl, microwave on full power for 3 minutes</li>
+				<li>Add The frozen fruit and porridge oats to a large bowl, microwave on full power for 3 mins</li>
 				<li>Chop up the banana</li>
 				<li>Mix in the banana and yoghurt with the fruit and oats</li>
 			</ol>
@@ -189,7 +269,7 @@
 				<li>Preheat fan oven to 200 degrees making sure 4 shelves are available</li>
 				<li>Prepare 4 baking trays by placing greaseproof paper on each and then flouring the paper to prevent the dough sticking</li>
 				<li>Add 250g of white self raising flour, baking powder and salt to a food processor and start processing, slowly add the natural yoghurt until it forms a dough, this should require all of the 250g</li>
-				<li>Tip the dough out onto a floured chopping board and split into 4 balls, roll each ball out into a flat shape about the size of your baking trays, flouring the board and dough as necessary. Add each rolled out ball to a prepared baking tray and place in the oven for approx. 10 minutes</li>
+				<li>Tip the dough out onto a floured chopping board and split into 4 balls, roll each ball out into a flat shape about the size of your baking trays, flouring the board and dough as necessary. Add each rolled out ball to a prepared baking tray and place in the oven for approx. 10 mins</li>
 			</ol>
 			<hr>
 		</section>
@@ -268,7 +348,7 @@
 			</ul>
 			<h3>Directions</h3>
 			<ol>
-				<li>Mist a large frying pan with cooking spray and cook the onion for 6-8 minutes over a medium heat until soft, then add the spices and garlic and cook for another minute. Add the mushrooms and cook for 7-8 minutes, or until tender.</li>
+				<li>Mist a large frying pan with cooking spray and cook the onion for 6-8 mins over a medium heat until soft, then add the spices and garlic and cook for another minute. Add the mushrooms and cook for 7-8 minutes, or until tender.</li>
 				<li>Stir in the soft cheese and yogurt and allow to melt, then season to taste.</li>
 				<li>Cook the rice to pack instructions and serve with the stroganoff.</li>
 			</ol>
