--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -27,7 +27,7 @@
 		}
 
 		ul {
-			list-style: none;
+			list-style: square;
 			margin: 0;
 			padding: 0;
 		}
@@ -85,15 +85,17 @@
 		<h2>Cooking Instructions:</h2>
 		<section>
 			<ul>
-				<li><a href="#berrie-brekkie">Berrie Brekkie</a></li>
 				<li><a href="#airfryer-cauliflower-pakoras">Air Fryer: Cauliflower Pakoras</a></li>
+				<li><a href="#airfryer-chicken-breasts">Air Fryer: Chicken Breasts</a></li>
 				<li><a href="#airfryer-heck-chicken-sausages">Air Fryer: Heck Chicken Sausages</a></li>
 				<li><a href="#airfryer-new-potatoes">Air Fryer: New Potatoes</a></li>
+				<li><a href="#airfryer-salmon-fillets">Air Fryer: Salmon Fillets</a></li>
 				<li><a href="#airfryer-squash-diced">Air Fryer: Squash Diced</a></li>
 				<li><a href="#airfryer-squash-quartered">Air Fryer: Squash Quartered</a></li>
+				<li><a href="#berrie-brekkie">Berrie Brekkie</a></li>
 				<li><a href="#flat-bread">Flat Bread</a></li>
 				<li><a href="#homemade-baked-beans">Homemade Baked Beans</a></li>
-				<li><a href="#microwave-chicken">Microwave: Chicken</a></li>
+				<li><a href="#microwave-chicken-breasts">Microwave: Chicken Breats</a></li>
 				<li><a href="#quark-dip">Quark Dip</a></li>
 			</ul>
 		</section>
@@ -118,6 +120,28 @@
 				<li>Cut the cauliflower into florets</li>
 				<li>Dip half of the cauliflower in the mixture and then add to air fryer at 180 for 15 mins</li>
 				<li>Take first batch out and store in microwave, then repeat a second batch</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+	<main>
+		<section id="airfryer-chicken-breasts">
+			<hr>
+			<h2>Air Fryer: Chicken Breasts</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Chicken Breasts, thawed</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Set air fryer to 180 degrees</li>
+				<li>Add chicken breats to the basket</li>
+				<li>Cook for 20 mins, turn every 10 mins</li>
 			</ol>
 			<hr>
 		</section>
@@ -172,6 +196,30 @@
 		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
 	</header>
 
+	<main>
+		<section id="airfryer-salmon-fillets">
+			<hr>
+			<h2>Air Fryer: Salmon Fillets</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Salmon Fillets, thawed</li>
+				<li>Extra Virgin Olive Oil, level teaspoon(s) x 1</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Set air fryer to 180 degrees</li>
+				<li>Rub a little olive oil onto the skins</li>
+				<li>Add salmon fillets to the basket skin side up</li>
+				<li>Cook for 10 mins</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+	
 	<main>
 		<section id="airfryer-squash-diced">
 			<hr>
@@ -305,9 +353,9 @@
 	</header>	
 	
 	<main>
-		<section id="microwave-chicken">
+		<section id="microwave-chicken-breasts">
 			<hr>
-			<h2>Microwave: Chicken</h2>
+			<h2>Microwave: Chicken Breasts</h2>
 			<h3>Ingredients</h3>
 			<ul>
 				<li>Chicken breast, skinless, raw</li>
