--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -73,6 +73,7 @@
 		<section id="section-recipes">
 			<ul>
 				<li><a href="#mushroom-stroganoff">Mushroom Stroganoff</a></li>
+				<li><a href="#sag-paneer">Sag Paneer</a></li>
 			</ul>
 		</section>
 	</main>
@@ -392,13 +393,12 @@
 				<li>Philadelphia Lightest Soft Cheese 80g</li>
 				<li>Paprika, tablespoon(s), level x 1</li>
 				<li>Chilli Powder, teaspoon(s), level x 1</li>
-				<li>White or Brown Rice, as required</li>
 			</ul>
 			<h3>Directions</h3>
 			<ol>
 				<li>Mist a large frying pan with cooking spray and cook the onion for 6-8 mins over a medium heat until soft, then add the spices and garlic and cook for another minute. Add the mushrooms and cook for 7-8 minutes, or until tender.</li>
 				<li>Stir in the soft cheese and yogurt and allow to melt, then season to taste.</li>
-				<li>Cook the rice to pack instructions and serve with the stroganoff.</li>
+				<li>Serve with rice.</li>
 			</ol>
 			<hr>
 		</section>
@@ -425,6 +425,35 @@
 			<ol>
 				<li>Whiz up the quark and chick peas until they are a fine paste</li>
 				<li>Then add the rest to chop roughly</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+	<main>
+		<section id="sag-paneer">
+			<hr>
+			<h2>Sag Paneer</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Paneer 400g</li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
 			</ol>
 			<hr>
 		</section>
