--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -96,7 +96,7 @@
 				<li><a href="#berrie-brekkie">Berrie Brekkie</a></li>
 				<li><a href="#flat-bread">Flat Bread</a></li>
 				<li><a href="#homemade-baked-beans">Homemade Baked Beans</a></li>
-				<li><a href="#microwave-chicken-breasts">Microwave: Chicken Breats</a></li>
+				<li><a href="#microwave-chicken-breasts">Microwave: Chicken Breasts</a></li>
 				<li><a href="#quark-dip">Quark Dip</a></li>
 			</ul>
 		</section>
@@ -141,7 +141,7 @@
 			<h3>Directions</h3>
 			<ol>
 				<li>Set air fryer to 180 degrees</li>
-				<li>Add chicken breats to the basket</li>
+				<li>Add chicken breasts to the basket</li>
 				<li>Cook for 20 mins, turn every 10 mins</li>
 			</ol>
 			<hr>
