--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -26,9 +26,15 @@
 			padding: 20px;
 		}
 
+		.no-bullets {
+			list-style: none;
+			margin-left: 10px;
+		}
+		
 		ul {
 			list-style: square;
 			margin: 0;
+			margin-left: 40px;
 			padding: 0;
 		}
 
@@ -71,7 +77,7 @@
 	<main>
 		<h2>Recipes:</h2>
 		<section id="section-recipes">
-			<ul>
+			<ul class="no-bullets">
 				<li><a href="#mushroom-stroganoff">Mushroom Stroganoff</a></li>
 				<li><a href="#sag-paneer">Sag Paneer</a></li>
 			</ul>
@@ -85,7 +91,7 @@
 	<main>
 		<h2>Cooking Instructions:</h2>
 		<section>
-			<ul>
+			<ul class="no-bullets">
 				<li><a href="#airfryer-cauliflower-pakoras">Air Fryer: Cauliflower Pakoras</a></li>
 				<li><a href="#airfryer-chicken-breasts">Air Fryer: Chicken Breasts</a></li>
 				<li><a href="#airfryer-heck-chicken-sausages">Air Fryer: Heck Chicken Sausages</a></li>
@@ -101,6 +107,10 @@
 			</ul>
 		</section>
 	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
 
 	<main>
 		<section id="airfryer-cauliflower-pakoras">
