--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -406,8 +406,9 @@
 			</ul>
 			<h3>Directions</h3>
 			<ol>
-				<li>Mist a large frying pan with cooking spray and cook the onion for 6-8 mins over a medium heat until soft, then add the spices and garlic and cook for another minute. Add the mushrooms and cook for 7-8 minutes, or until tender.</li>
-				<li>Stir in the soft cheese and yogurt and allow to melt, then season to taste.</li>
+				<li>Mist a large frying pan with cooking spray and cook the onions and garlic for 5 mins over a medium heat until soft.</li>
+				<li>Mix the soft cheese, yoghurt and spices in a bowl, then add to the onions and garlic and cook for a further 2 mins.</li>
+				<li>Add the mushrooms and cannellini beans and cook for 10 minutes, or until the sauce thickens.</li>
 				<li>Serve with rice.</li>
 			</ol>
 			<hr>
