--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -94,6 +94,7 @@
 			<ul class="no-bullets">
 				<li><a href="#airfryer-cauliflower-pakoras">Air Fryer: Cauliflower Pakoras</a></li>
 				<li><a href="#airfryer-chicken-breasts">Air Fryer: Chicken Breasts</a></li>
+				<li><a href="#airfryer-frozen-cod-and-salmon-fillets">Air Fryer: Frozen Cod and Salmon Fillets</a></li>
 				<li><a href="#airfryer-heck-chicken-sausages">Air Fryer: Heck Chicken Sausages</a></li>
 				<li><a href="#airfryer-new-potatoes">Air Fryer: New Potatoes</a></li>
 				<li><a href="#airfryer-salmon-fillets">Air Fryer: Salmon Fillets</a></li>
@@ -153,6 +154,29 @@
 				<li>Set air fryer to 180 degrees</li>
 				<li>Add chicken breasts to the basket</li>
 				<li>Cook for 20 mins, turn every 10 mins</li>
+			</ol>
+			<hr>
+		</section>
+	</main>
+
+	<header>
+		<a href="./index.html"><button style="font-size: 18px;">Home</button></a>
+	</header>
+
+		<main>
+		<section id="airfryer-frozen-cod-and-salmon-fillets">
+			<hr>
+			<h2>Air Fryer: Frozen Cod and Salmon Fillets</h2>
+			<h3>Ingredients</h3>
+			<ul>
+				<li>Chicken Breasts, thawed</li>
+			</ul>
+			<h3>Directions</h3>
+			<ol>
+				<li>Set air fryer to 140 degrees</li>
+				<li>Spray air fryer basket with a little oil</li>
+				<li>Add fillets to the basket</li>
+				<li>Cook for 15 mins, turn halfway through</li>
 			</ol>
 			<hr>
 		</section>
