--- a/food_ideas/index.html
+++ b/food_ideas/index.html
@@ -169,7 +169,7 @@
 			<h2>Air Fryer: Frozen Cod and Salmon Fillets</h2>
 			<h3>Ingredients</h3>
 			<ul>
-				<li>Chicken Breasts, thawed</li>
+				<li>Cod or Salmon Fillets, frozen</li>
 			</ul>
 			<h3>Directions</h3>
 			<ol>
